--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.0.8",
+    "jsbarcode": "^3.11.6",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.22.3",
     "vite-react-typescript-starter": "file:"
   },
   "devDependencies": {
